[gd_scene load_steps=3 format=3 uid="uid://clx84grb420ar"]

[ext_resource type="Script" path="res://UI.gd" id="1_he5e8"]
[ext_resource type="Texture2D" uid="uid://0jslu56b8sd2" path="res://Achtergrond-100.jpg" id="1_j81ks"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_he5e8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 325)
texture = ExtResource("1_j81ks")

[node name="TokenLabel" type="Label" parent="."]
offset_left = 708.0
offset_top = 268.0
offset_right = 748.0
offset_bottom = 291.0
text = "0"

[node name="add_token_button" type="Button" parent="."]
offset_left = 360.0
offset_top = 385.0
offset_right = 484.0
offset_bottom = 426.0
text = "Tokens"

[node name="shop_button" type="Button" parent="."]
offset_left = 622.0
offset_top = 341.0
offset_right = 692.0
offset_bottom = 383.0
text = "Snack"

[connection signal="pressed" from="add_token_button" to="." method="_on_add_token_button_pressed"]
[connection signal="pressed" from="shop_button" to="." method="_on_shop_button_pressed"]
